-ganti warna background

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<section class="header">
 
-		<a href="home.html" class="logo">Wisata INDONESIA</a>
+		<a href="home.html" class="logo">WISATA INDONESIA</a>
 
 		<nav class="navbar">
 			<a href="home.html">Main</a>
@@ -136,7 +136,7 @@
 			<div class="box">
 				<h3>Info Kontak</h3>
 				<a href="#"> <i class="fas fa-phone"></i> +6289526297399</a>
-				<a href="#"> <i class="fas fa-envelope"></i>arisetiawanari10@gmail.com </a>
+				<a href="#"> <i class="fas fa-envelope"></i> arisetiawanari10@gmail.com </a>
 				<a href="#"> <i class="fas fa-map"></i> Purbalingga, Indonesia</a>
 			</div>
 
@@ -150,7 +150,7 @@
 
 		</div>
 
-		<div class="credit"> Copyright <span> IndoXploit </span> 2023 </div>
+		<div class="credit"> Copyright <span> Heavenly7 </span> 2023 </div>
 
 	</section>
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
